- function for get and store annonce and swagger - function for upload file and swagger - store data in annonceUser - add categorie - add method for save user we have deleted
