# app/Http/Requests/StoreAnnonceRequest.php
@@ -13,7 +13,7 @@ class StoreAnnonceRequest extends FormRequest
      */
     public function authorize()
     {
-        return false;
+        return true;
     }
 
     /**
@@ -24,7 +24,23 @@ class StoreAnnonceRequest extends FormRequest
     public function rules()
     {
         return [
-            //
+            "title" => "required|string",
+            "price" => "integer|required",
+            "size" => "string",
+            "images" => "required|string",
+            "description" => "required|string",
+            'state_product' => "required|string",
+            "color" => "string",
+            "localization" => "string",
+            'option_discutable' => "boolean",
+            'state_property' => "string",
+            'type_property' => "string",
+            "date_publish" => "date",
+            "job_type" => "string",
+            'state_job' => "string",
+            'availability' => "required|string",
+            'state_annonce' => "required|string",
+            'categorie_id' => "integer"
         ];
     }
 }
